# num-methods-cauchy

./: .gitignore  CMakeLists.txt  README.md
include/: RK4Solver.hpp  SimulationData.h  TaskSolver.h  Vector.hpp
include/interface/: ResultsModel.h  mainwindow.h
include/math/: RK4Solver.hpp  Vector.hpp
src/: TaskSolver.cpp  main.cpp  test_task.cpp
src/interface/: mainwindow.cpp  mainwindow.ui
